commit till ui of home , swipe,prfile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: campus_match
-description: "A new Flutter project."
+description: "A beautiful campus dating and confessions app."
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -38,6 +39,8 @@ dependencies:
   lottie: ^3.1.2
   google_fonts: ^6.2.1
   animated_text_kit: ^4.3.0
+  flutter_card_swiper: ^7.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
