commit till profile logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   google_fonts: ^6.2.1
   animated_text_kit: ^4.3.0
   flutter_card_swiper: ^7.1.0
+  http: ^1.2.2
+  image_picker: ^1.0.8
+  uuid: ^4.3.3
+  permission_handler: ^11.3.1
 
 
 
