--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,55 @@
-{"functions":[{"source":"functions","codebase":"default","ignore":["node_modules",".git","firebase-debug.log","firebase-debug.*.log","*.local"],"predeploy":["npm --prefix \"$RESOURCE_DIR\" run lint"]}],"flutter":{"platforms":{"android":{"default":{"projectId":"campusmatch-2991a","appId":"1:566475001303:android:2371d6ec50b2178f8b8f92","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"campusmatch-2991a","configurations":{"android":"1:566475001303:android:2371d6ec50b2178f8b8f92","ios":"1:566475001303:ios:402ad614ec58193c8b8f92","macos":"1:566475001303:ios:402ad614ec58193c8b8f92","web":"1:566475001303:web:1281e0a5b69a6dc58b8f92","windows":"1:566475001303:web:8be8e03ef99d10188b8f92"}}}}}}
+{
+  "functions": [
+    {
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ],
+      "source": "functions"
+    },
+    {
+      "source": "match-functions",
+      "codebase": "match-functions",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ],
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "campusmatch-2991a",
+          "appId": "1:566475001303:android:2371d6ec50b2178f8b8f92",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "campusmatch-2991a",
+          "configurations": {
+            "android": "1:566475001303:android:2371d6ec50b2178f8b8f92",
+            "ios": "1:566475001303:ios:402ad614ec58193c8b8f92",
+            "macos": "1:566475001303:ios:402ad614ec58193c8b8f92",
+            "web": "1:566475001303:web:1281e0a5b69a6dc58b8f92",
+            "windows": "1:566475001303:web:8be8e03ef99d10188b8f92"
+          }
+        }
+      }
+    }
+  }
+}
