--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^4.1.1
-  firebase_auth: ^6.1.0
-  cloud_firestore: ^6.0.2
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
   firebase_storage: ^13.0.2
   firebase_database: ^12.0.2
   lottie: ^3.1.2
@@ -45,6 +45,7 @@ dependencies:
   uuid: ^4.3.3
   permission_handler: ^12.0.1
   confetti: ^0.8.0
+  firebase_messaging: ^16.0.3
 
 
 
