--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,18 @@ dependencies:
   confetti: ^0.8.0
   firebase_messaging: ^16.0.3
   provider: ^6.1.2
+  flutter_staggered_animations: ^1.1.1
+  timeago: ^3.6.1
+  intl: ^0.18.1
+  emoji_picker_flutter: ^4.3.0
+  visibility_detector: ^0.4.0+2
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
